# projet_python

./: .pdm-python  README.md  coverage.json  pyproject.toml
docs/: conf.py  danproject.rst
docs/_build/doctrees/: danproject.doctree  danproject.dummy.doctree  environment.pickle  index.doctree  modules.doctree
docs/_build/html/: danproject.dummy.html  danproject.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/danproject/: dummy.html
docs/_build/html/_sources/: danproject.dummy.rst.txt  index.rst.txt  modules.rst.txt
src/danproject/: dummy.py
tests/: test_dummi.py
